k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-ssp-nodejs
  labels:
    app: ssp-nodejs
spec:
  selector:
    app: ssp-nodejs
  ports:
  - port: 7070
    protocol: TCP
    nodePort: 30062
  type: LoadBalancer
